--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     ]
   },
   "dependencies": {
+    "@blitz-guard/core": "0.4.1",
     "@prisma/client": "2.31.0-integration-undici-4.3",
     "blitz": "0.39.0",
-    "react-dom": "alpha",
-    "react": "alpha",
-    "zod": "3.9.4",
     "final-form": "4.20.4",
-    "react-final-form": "6.5.6"
+    "react": "alpha",
+    "react-dom": "alpha",
+    "react-final-form": "6.5.6",
+    "zod": "3.9.4"
   },
   "devDependencies": {
     "@types/preview-email": "2.0.1",
@@ -38,8 +39,8 @@
     "eslint": "7.32.0",
     "husky": "6.0.0",
     "lint-staged": "10.5.4",
-    "prettier-plugin-prisma": "0.15.0",
     "prettier": "2.4.1",
+    "prettier-plugin-prisma": "0.15.0",
     "pretty-quick": "3.1.1",
     "preview-email": "3.0.5",
     "prisma": "2.31.0-integration-undici-4.3",
